--- a/gradle.properties
+++ b/gradle.properties
@@ -9,18 +9,32 @@ forge_version=36.2.23
 forge_version_range=[34,)
 forge_gradle_version=5.1.+
 
+librarian_version=1.+
+
 mixin_gradle_version=0.7-SNAPSHOT
 mixin_ap_version=0.8.4
 
 mappings_channel=parchment
 mappings_version=2021.07.27-1.16.5
 
-mod_id=template
-mod_name=TemplateMod
+mod_id=fantasyfurniture
+mod_name=Fantasy's Furniture
 mod_version=1.0.0
 mod_base_package=xyz.apex.forge
-mod_authors=Apex
+mod_authors=Apex, FantasyGaming
+mod_curseforge_id=-1
 
+registrator_version=1.0.23
+registrator_version_range=[1.0.22,2.0.0)
+registrator_cf_project=550146
+registrator_cf_file=3632643
+
+apexcore_version=1.1.24
+apexcore_version_range=[1.1.23,2.0.0)
+apexcore_cf_project=550778
+apexcore_cf_file=3632663
+
+cursegradle_version=1.4.0
 jei_version=7.6.4.90
 top_version=3.1.4-22
 smooth_boot_version=1.0.0
