Add curseforge data
Signed-off-by: ApexModder <robsonlawson3@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ mod_name=Fantasy's Furniture
 mod_version=1.0.0
 mod_base_package=xyz.apex.forge
 mod_authors=Apex, FantasyGaming
-mod_curseforge_id=-1
+mod_curseforge_id=579564
 
 registrator_version=1.0.23
 registrator_version_range=[1.0.22,2.0.0)
