--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ issueTrackerURL="https://github.com/ApexModder/FantasyFurniture/issues"
 	version="${mod_version}"
 	displayName="${mod_name}"
 	updateJSONURL="https://raw.githubusercontent.com/ApexModder/Version/master/fantasyfurniture.json"
-	# displayURL="https://www.curseforge.com/minecraft/mc-mods/fantasys-furniture"
+	displayURL="https://www.curseforge.com/minecraft/mc-mods/fantasys-furniture"
 	# logoFile="banner.png"
 	# credits=""
 	authors="${mod_authors}"
