--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ minecraft_version=1.16.5
 minecraft_version_range=[1.16,1.17)
 minecraft_version_short=1.16
 
-forge_version=36.2.23
-forge_version_range=[34,)
+forge_version=36.2.29
+forge_version_range=[36,)
 forge_gradle_version=5.1.+
 
 librarian_version=1.+
@@ -15,7 +15,7 @@ mixin_gradle_version=0.7-SNAPSHOT
 mixin_ap_version=0.8.4
 
 mappings_channel=parchment
-mappings_version=2021.07.27-1.16.5
+mappings_version=2021.10.17-1.16.5
 
 mod_id=fantasyfurniture
 mod_name=Fantasy's Furniture
@@ -24,17 +24,22 @@ mod_base_package=xyz.apex.forge
 mod_authors=Apex, FantasyGaming
 mod_curseforge_id=579564
 
-registrator_version=1.0.24
-registrator_version_range=[1.0.24,2.0.0)
+apexcore_mod_id=apexcore
+apexcore_version=1.1.29
+apexcore_version_range=[1.1.29,2.0.0)
+apexcore_cf_project=550778
+apexcore_cf_file=3655608
+
+registrator_mod_id=registrator
+registrator_version=1.0.25
+registrator_version_range=[1.0.25,2.0.0)
 registrator_cf_project=550146
 registrator_cf_file=3649353
 
-apexcore_version=1.1.26
-apexcore_version_range=[1.1.23,2.0.0)
-apexcore_cf_project=550778
-apexcore_cf_file=3648709
+registrate_version=1.0.10
+registrate_package=com.tterrag.registrate
 
-cursegradle_version=1.4.0
 jei_version=7.6.4.90
-top_version=3.1.4-22
-smooth_boot_version=1.0.0
+cursegradle_version=1.4.0
+gradle_shadow_version=5.2.0
+javautilities_version=1.0.7-j8
