Add comment to shade dependency exclusions
Signed-off-by: ApexModder <robsonlawson3@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -330,6 +330,10 @@ shadowJar {
 	configurations = [ project.configurations.shade ]
 	relocate "${registrate_package}", "xyz.apex.repack.${registrate_package}"
 
+	// we only want to remap class refrences imports etc
+	// and not shade in these into the mod jar
+	// registrator already comes with these pre shaded
+	// and we dependend on registrator
 	dependencies {
 		exclude dependency("com.tterrag.registrate:Registrate:MC${minecraft_version}-${registrate_version}")
 		exclude dependency("xyz.apex.java.utility:javautilities:${javautilities_version}")
