Update mod dependencies To load mod after jei (optionally)
Signed-off-by: ApexModder <robsonlawson3@gmail.com>

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -38,3 +38,9 @@ issueTrackerURL="https://github.com/ApexModder/FantasyFurniture/issues"
 	versionRange="${apexcore_version_range}"
 	ordering="AFTER"
 	side="BOTH"
+[[dependencies.${mod_id}]]
+	modId="${jei_mod_id}"
+	mandatory=false
+	versionRange="${jei_version_range}"
+	ordering="AFTER"
+	side="BOTH"
